Добавлены новые свойства в модель девайса и актуализирован запрос на создание девайса
