# docs/swagger.yaml
@@ -6,9 +6,15 @@ definitions:
         type: string
       name:
         type: string
+      os_version:
+        type: string
+      type:
+        type: string
     required:
     - imei
     - name
+    - os_version
+    - type
     type: object
   deviceController.CreateOneResponse:
     properties:
@@ -21,6 +27,10 @@ definitions:
           imei:
             type: string
           name:
+            type: string
+          os_version:
+            type: string
+          type:
             type: string
           updated_at:
             type: string
@@ -41,6 +51,10 @@ definitions:
         type: string
       name:
         type: string
+      os_version:
+        type: string
+      type:
+        type: string
       updated_at:
         type: string
     type: object
@@ -60,7 +74,7 @@ definitions:
     type: object
   deviceController.GetOneResponse:
     properties:
-      devices:
+      device:
         $ref: '#/definitions/deviceController.Device'
     type: object
   deviceController.UpdateOneRequest:
